infra/k8s-prod/ingress.srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # this is what allows us to use the wildcard below
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.letshustle-app.online
      http:
        paths:
          - path: /api/?(.*)
            backend:
              # any request which contains api/ will be routed to our backend cluster ip service
              # so will go to our backend container
              serviceName: backend-srv
              servicePort: 3000
          # list out our client service at the bottom to ensure doesntt match this for every single request
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
